Add other setup files

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html>
 <head>
-    <title>Excalibur.js Game</title>
+   <meta charset="UTF-8"> 
+   <title>{GAME_TITLE} - Ludum Dare 41</title>
+   <link rel="stylesheet" href="game/assets/game.css">
 </head>
 <body>
 
@@ -9,5 +11,10 @@
     <script src="lib/excalibur-dist/excalibur.min.js" type="text/javascript"></script>
     <!-- Game reference -->
     <script src="game/game.js" type="text/javascript"></script>
+    
+    <footer>Made with <a href="http://excaliburjs.com">Excalibur.js</a> 
+      &bull; <a href="credits.html">Credits</a>
+      &bull; version <a id='commit-number' href="https://github.com/excaliburjs/ludum-41/commit/COMMIT_NUMBER">@COMMIT_NUMBER</a>
+   </footer>
 </body>
 </html>
