--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html>
 <head>
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-46390208-1"></script>
+   <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-46390208-1');
+   </script>
+
    <meta charset="UTF-8"> 
    <title>{GAME_TITLE} - Ludum Dare 41</title>
    <link rel="stylesheet" href="game/assets/game.css">
