Cache bust based on commit number

--- a/credits.html
+++ b/credits.html
@@ -11,7 +11,7 @@
       </script>
     <meta charset="UTF-8">
     <title>{GAME_TITLE} - Credits</title>
-    <link rel="stylesheet" href="game/assets/game.css">
+    <link rel="stylesheet" href="game/assets/game.css?COMMIT_NUMBER">
 </head>
 <body>
    <h2>Thanks for playing!</h2>
