--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
    <meta charset="UTF-8"> 
    <title>{GAME_TITLE} - Ludum Dare 41</title>
-   <link rel="stylesheet" href="game/assets/game.css">
+   <link rel="stylesheet" href="game/assets/game.css?COMMIT_NUMBER">
 </head>
 <body>
 
     <!-- Excalibur.js reference -->
-    <script src="lib/excalibur-dist/excalibur.min.js" type="text/javascript"></script>
+    <script src="lib/excalibur-dist/excalibur.min.js?COMMIT_NUMBER" type="text/javascript"></script>
     <!-- Game reference -->
-    <script src="game/game.js" type="text/javascript"></script>
+    <script src="game/game.js?COMMIT_NUMBER" type="text/javascript"></script>
     
     <footer>Made with <a href="http://excaliburjs.com">Excalibur.js</a> 
-      &bull; <a href="credits.html">Credits</a>
+      &bull; <a href="credits.html?COMMIT_NUMBER">Credits</a>
       &bull; version <a id='commit-number' href="https://github.com/excaliburjs/ludum-41/commit/COMMIT_NUMBER">@COMMIT_NUMBER</a>
    </footer>
 </body>
