--- a/credits.html
+++ b/credits.html
@@ -22,8 +22,8 @@
          <a href="https://twitter.com/erikonarheim">Erik Onarheim</a>, 
          <a href="https://www.joshedeen.com/about/">Josh Edeen</a>, 
          <a href="https://twitter.com/kamranayub">Kamran Ayub</a>, 
-         <a href="https://twitter.com/alangrgic">Alan Grgic</a>, 
-         and <a href="https://twitter.com/doctorigo">Sean Igo</a>, 
+         <a href="https://twitter.com/spellgrgicright">Alan Grgic</a>, 
+         and <a href="https://twitter.com/SeanCIgo">Sean Igo</a>, 
          for <a href="https://ldjam.com/events/ludum-dare/41">Ludum Dare 41</a>
       </p>
       <p>Powered by <a href="http://excaliburjs.com">ExcaliburJS</a></p>
