--- a/credits.html
+++ b/credits.html
@@ -32,7 +32,7 @@
       <h2>Acknowledgements</h2>
 
       <ul>
-         <li></li>
+         <li><a href="https://opengameart.org/content/2d-bike-sprite-2">chasersgaming</a> - bike with man</li>
       </ul>
 
       <h2>Licenses</h2>
