Multiple obstacle types

--- a/credits.html
+++ b/credits.html
@@ -33,6 +33,7 @@
 
       <ul>
          <li><a href="https://opengameart.org/content/2d-bike-sprite-2">chasersgaming</a> - bike with man</li>
+         <li><a href="https://opengameart.org/content/crate-texture-pack">MrCraft Animation</a> - crate textures</li>
       </ul>
 
       <h2>Licenses</h2>
