Fix excalibur bug with sprites/firefox

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <!-- Excalibur.js reference -->
-    <script src="lib/excalibur-dist/excalibur.min.js?COMMIT_NUMBER" type="text/javascript"></script>
+    <script src="lib/excalibur-dist/excalibur.js?COMMIT_NUMBER" type="text/javascript"></script>
     <!-- Game reference -->
     <script src="build/bundle.js?COMMIT_NUMBER" type="text/javascript"></script>
     
