--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    </script>
 
    <meta charset="UTF-8"> 
-   <title>{GAME_TITLE} - Ludum Dare 41</title>
+   <title>Office Daydream - Ludum Dare 41</title>
    <link rel="stylesheet" href="game/assets/game.css?COMMIT_NUMBER">
 </head>
 <body>
