Publish spooky analytics

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     <!-- JS libs -->
     <script src="lib/storejs/store.min.js"></script>
+    <script src="lib/fetchjs/fetch.min.js"></script>
 
     <!-- Excalibur.js reference -->
     <script src="lib/excalibur-dist/excalibur.js?COMMIT_NUMBER" type="text/javascript"></script>
