add credits for sounds

--- a/credits.html
+++ b/credits.html
@@ -34,6 +34,10 @@
       <ul>
          <li><a href="https://opengameart.org/content/2d-bike-sprite-2">chasersgaming</a> - bike with man</li>
          <li><a href="https://opengameart.org/content/crate-texture-pack">MrCraft Animation</a> - crate textures</li>
+         <li>"Extreme Action" by <a href="https://www.bensound.com/royalty-free-music/track/extreme-action">bensound.com</a></li>
+         <li>"Office Ambience" by <a href="https://freesound.org/people/FunnyMan374/sounds/108695/">FunnyMan374</a></li>
+         <li>Page Turn by <a href="https://freesound.org/people/flag2/sounds/63318/">flag2</a></li>
+         <li>Other sound effects generated with<a href="https://jfxr.frozenfractal.com/"> JFXR</a></li>
       </ul>
 
       <h2>Licenses</h2>
