--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
    <title>Office Daydream - Ludum Dare 41</title>
    <link rel="stylesheet" href="game/assets/game.css?COMMIT_NUMBER">
    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
+   <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+   <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 
-   <!-- <meta property="og:title" content="Office Daydream - Ludum Dare 41"/>
+   <meta property="og:title" content="Office Daydream - Ludum Dare 41"/>
    <meta property="og:url" content="http://excaliburjs.com/ludum-41/"/>
-   <meta property="og:image" content="http://excaliburjs.com/ludum-41/img/favicon.png" /> -->
+   <meta property="og:image" content="http://excaliburjs.com/ludum-41/img/favicon.png" />
 </head>
 <body>
     <canvas id="game"></canvas>
