--- a/credits.html
+++ b/credits.html
@@ -18,7 +18,7 @@
    <div>      
       <p>Assembled for your entertainment by 
          <a href="https://twitter.com/erikonarheim">Erik Onarheim</a>, 
-         <a href="https://www.joshedeen.com/about/">Josh Edeen</a>, 
+         <a href="https://www.jedeen.com">J. Edeen</a>, 
          <a href="https://twitter.com/kamranayub">Kamran Ayub</a>, 
          <a href="https://twitter.com/spellgrgicright">Alan Grgic</a>, 
          and <a href="https://twitter.com/SeanCIgo">Sean Igo</a>, 
